--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
-    "koa-static": "^4.0.2"
+    "koa-static": "^4.0.2",
+    "log4js": "^2.5.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
