--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "styled-components": "^3.2.6"
+    "styled-components": "^3.2.6",
+    "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
